[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdgpt"
version = "0.1.0"
description = "Deterministic MD project generator (GROMACS-first) with validation + provenance."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "Jinja2>=3.1",
]

[project.scripts]
mdgpt = "mdgpt.cli:main"
